# gcserussian

./: .gitignore  DEPLOYMENT.md  README.md  analysis_module.py  audio_input.py  auth_utils.py  convert_themes.py  convert_vocab.py  data_loaders.py  database.py  development_plan.md  frontend_analysis.md  frontend_plan.md  main.py  map_vocab_to_themes_llm.py  models.py  pyproject.toml  question_generator.py  remove.txt  requirements.txt  seed_db.py  services.py  spec-russian - v1.md  streamlit_app.py  streamlit_plan.md  syllabus.md  templatetts.py  test output.txt  test_app.db  test_full_flow.py  test_import.py  test_syllabus_parser.py  themes.json  themes.md  tts_module.py  vocab.csv  vocab.json  vocab_categories.txt
.streamlit/: config.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/pages/: Dashboard.tsx  Exam.tsx  Login.tsx
