[project]
name = "russian"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.52.0",
    "google-generativeai>=0.8.5",
    "numpy>=2.3.5",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "sounddevice>=0.5.3",
    "soundfile>=0.13.1",
]
